--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,9 @@
 {
+  "hdm_logo_font_size": {
+    "line1": "1em",
+    "line2": "1.5em"
+  },
+
   "find_out": "find out",
   "more": "more",
   "about": "about",
@@ -51,6 +56,7 @@
     "fetching_repos": "Fetching Repositories..."
   },
   "work": {
+    "fetching_repo": "Repository lädt...",
     "project_id": "Project ID",
     "creation_date": "Creation Date",
     "visit_the": "visit the",
